samples/_failures_safe/1761457366_c5d9a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bedcabdb.c: In function ‘main’:
./samples/SAFE/__tmp_bedcabdb.c:163:5: error: expected expression at end of input
  163 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_bedcabdb.c:163:5: error: expected declaration or statement at end of input
